<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:text="¿Qué equipo o equipos usara?"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_marginVertical="6dp"
        android:text="Podrá editar su decisión cuando desee"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#CD0000"
        android:layout_marginVertical="6dp"
        android:text="*Es obligatorio llenar este campo antes de continuar*"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_eliminador_humo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="18dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="16sp"
        android:text="@string/eliminador_de_humo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_b_q600"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="18dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="16sp"
        android:text="@string/b_q600"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_bonaire_bqv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="18dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="16sp"
        android:text="@string/bonaire_bqv"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_tech_ce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="18dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="16sp"
        android:text="@string/bonaire_tech_ce"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_campanas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="18dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="16sp"
        android:text="@string/campanas_inteligentes"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_continuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:text="CONTINUAR"
            android:textSize="20sp"
            android:enabled="false"/>

    </RelativeLayout>
</LinearLayout>